--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -1,6 +1,22 @@
 <div class="custom-footer">
-    <span>© {{ now.Year }} Wei-Jen Tseng | Mail/信箱: [contact method TBD] | Powered by 
+    <span>© {{ now.Year }} Wei-Jen Tseng | Mail/信箱: <span id="email-link"></span> | Powered by 
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> & 
         <a href="https://github.com/adityatelange/hugo-PaperMod/" rel="noopener" target="_blank">PaperMod</a>
     </span>
 </div>
+
+<script>
+(function() {
+    // 反轉的 email: blog@weiren.org
+    var reversedEmail = 'gro.neriew@golb';
+    var email = reversedEmail.split('').reverse().join('');
+    var emailLink = document.getElementById('email-link');
+    
+    if (emailLink) {
+        var link = document.createElement('a');
+        link.href = 'mailto:' + email;
+        link.textContent = email;
+        emailLink.appendChild(link);
+    }
+})();
+</script>
