Fix cdn-img shortcode to support HTML in caption

--- a/layouts/shortcodes/cdn-img.html
+++ b/layouts/shortcodes/cdn-img.html
@@ -15,5 +15,5 @@
     {{- with $width }} width="{{ . }}"{{ end -}}
     {{- with $height }} height="{{ . }}"{{ end -}}
   >
-  {{- with $caption }}<figcaption>{{ . }}</figcaption>{{ end -}}
+  {{- with $caption }}<figcaption>{{ . | safeHTML }}</figcaption>{{ end -}}
 </figure>
